--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get_it: ^7.2.0
 
+  adaptive_theme: ^3.5.0
+  flutter_bloc: ^8.1.2
+  equatable: ^2.0.5
+  json_annotation: ^4.8.0
+  talker_flutter: ^4.0.0
+  talker_bloc_logger: ^4.0.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -20,7 +27,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
 
