--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 0.0.8+1
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^7.6.7
-
+  package_info_plus: ^5.0.1
   adaptive_theme: ^3.6.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
