--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 0.2.1+1
+version: 0.3.0+1
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
@@ -30,6 +30,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
 
 flutter:
-
+  assets:
+  - assets/png/
 
   uses-material-design: true
